# my_disc_collection

./: Cargo.toml  my_physical_disc_collection.db
src/: main.rs  search.rs
src/collection/: collection_views.rs  mod.rs  owned_disc.rs  owned_disc_api.rs  owned_disc_dam.rs
templates/pages/: index.hbs
templates/parts/: disc_search.hbs
templates/views/: collection.hbs  recherche.hbs
