[package]
name = "physical-music-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.9.0",  features = ["cookie-session"] }
actix-web = "4.4.1"
env_logger = "0.11.1"
handlebars = "4.5.0"
qstring = "0.7.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
reqwest = "0.11.23"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"]}
